# AT1-Stress-Radar

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: streamlit_app.py
data/instruments/: synthetic_bank_alpha_at1.yaml  synthetic_bank_beta_at1.yaml
data/scenarios/: basic_scenarios.yaml
docs/: architecture.md  data_dictionary.md  methodology.md  roadmap.md
src/at1radar/: __init__.py  cli.py  dates.py
src/at1radar/cashflows/: __init__.py  schedule.py
src/at1radar/data/: __init__.py  instrument_loader.py  scenario_loader.py  yaml_io.py
src/at1radar/domain/: __init__.py  instruments.py  scenarios.py
src/at1radar/pricing/: __init__.py  state_pricing.py
tests/: conftest.py
tests/fixtures/: invalid_negative_notional.yaml  malformed.yaml  valid_instrument.yaml
tests/unit/: test_cashflow_schedule.py  test_cli.py  test_instrument_loader.py  test_instrument_models.py  test_scenarios.py  test_state_pricing.py
