[project]
name = "at1radar"
version = "0.1.0"
description = "Research and stress-testing prototype for Additional Tier 1 (AT1) bank capital instruments"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "streamlit>=1.50",
]

[project.scripts]
at1radar = "at1radar.cli:main"

[dependency-groups]
dev = [
    "mypy>=1.10",
    "pandas-stubs>=2.2",
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "types-pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/at1radar"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests", "app"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]

[tool.mypy]
python_version = "3.12"
files = ["src", "app", "tests"]
mypy_path = "src"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = ["streamlit.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=at1radar --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
source = ["src/at1radar"]

[tool.coverage.report]
exclude_also = ["if TYPE_CHECKING:", "raise NotImplementedError"]
